# mongoengine-goodjson

./: .codeclimate.yml  .coverage  .editorconfig  .gitignore  .travis.yml  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  docker-compose.yml  gulpfile.coffee  gulpfile.js  package-lock.json  package.json  pyproject.toml  python27.coverage  python35.coverage  python36.coverage  renovate.json  requirements.in  requirements.txt  setup.py  test.sh  tox.ini
.circleci/: config.yml
doc/: Makefile  make.bat
doc/source/: additional_features.rst  basic_use.rst  conf.py  contribution.rst  dive_in_deep.rst  get_started.rst  index.rst  license.rst  modules.rst  mongoengine_goodjson.fields.rst  mongoengine_goodjson.rst
mongoengine_goodjson/: __init__.py  decoder.py  document.py  encoder.py  queryset.py  utils.py
mongoengine_goodjson/document/: __init__.py  custom.py  document.py
mongoengine_goodjson/fields/: __init__.py  follow_rederence.py  follow_reference.py  objectid.py
tests/: __init__.py  con_base.py  connection_case.py  decoder.py  document.py  encoder.py  integration.py  queryset.py  test_decoder.py  test_document.py  test_encoder.py  test_extended_json.py  test_id_replace.py  test_objectid.py  test_queryset.py
tests/follow_reference_field/: __init__.py  definition.py  schema.py  test_to_mongo.py  test_to_python.py  to_mongo.py  to_python.py
tests/integration/: __init__.py  document.py  fixtures.py  queryset.py  schema.py  test_document.py  test_queryset.py
tests/integration/document/: __init__.py  test_embedded_document.py  test_field_exclusion.py  test_follow_reference.py  test_non_oid_document.py  test_normal_document.py
tests/integration/fields/: __init__.py  test_follow_reference_field.py
tests/integration/fields/follow_reference/: __init__.py  test_callable_recursion.py  test_complex_type.py  test_list_recursion.py  test_model_load.py  test_recursion_limit.py  test_simple_serialization.py
tests/integration/fixtures/: __init__.py  articles.py  base.py  email.py  reference.py  user.py
