[tool.poetry]
name = "mongoengine_goodjson"
version = "0.0.0"
description = "More human readable JSON serializer/de-serializer for MongoEngine"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
license = "MIT"
readme = "README.md"
documentation = "https://mongoengine-goodjson.readthedocs.io/"
keywords = ["json", "mongoengine", "mongodb"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3"
]
packages = [
  { include = "doc" },
  { include = "mongoengine_goodjson" }
]

[tool.poetry.dependencies]
python = "^3.5 || ^2.7"
mongoengine = "^0.16.3"
singledispatch = {version = "^3.4",python = "^2.7"}
dateutils = "^0.6.6"

[tool.poetry.dev-dependencies]
tox = "^3.7"
coverage = "^4.5"
flake8 = "^3.7"
flake8-docstrings = "^1.3"
radon = "<3.0.0"
sphinx = "^1.8"
six = "^1.12"
mongomock = "^3.14"
mock = {version = "^2.0",python = "^2.7"}

[tool.tox]
legacy_tox_ini = '''
[tox]
envlist = 2,3
skipsdist = True

[testenv]
basepython =
  2: python2
  3: python3
deps = poetry
commands_pre =
  poetry install
commands =
  flake8 mongoengine_goodjson tests
  radon cc -nc mongoengine_goodjson
  radon mi -nc mongoengine_goodjson
  coverage erase
  coverage run --branch --omit=tests,.tox \
               --source=mongoengine_goodjson \
               -m unittest discover -b
setenv =
  2: COVERAGE_FILE=.coverage.2
  3: COVERAGE_FILE=.coverage.3
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
