[tool.poetry]
name = "mongoengine-goodjson"
version = "1.99.0"
description = "More human readable JSON serializer/de-serializer for MongoEngine"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.23.0"

[tool.poetry.dev-dependencies]
tox = "^3.14.4"
flake8 = "^4.0.0"
flake8-docstrings = "^1.5.0"
flake8-commas = "^2.0.0"
mongomock = "^3.19.0"
coverage = "^6.0.0"
flake8-polyfill = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
